--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         <!-- Loading screen -->
         <div
           x-ref="loading"
-          class="fixed inset-0 z-50 flex items-center justify-center text-2xl font-semibold text-white "
+          class="fixed inset-0 z-50 flex items-center justify-center text-2xl font-semibold text-white"
         >
           Loading.....
         </div>
@@ -537,7 +537,7 @@
                     :class="{ 'translate-x-0 -translate-y-px  bg-white text-primary-dark': !isDark, 'translate-x-6 text-primary-100 bg-primary-darker': isDark }"
                   >
                     <svg
-                      x-show="!isDark" 
+                      x-show="!isDark"
                       class="w-4 h-4"
                       xmlns="http://www.w3.org/2000/svg"
                       fill="none"
@@ -1571,9 +1571,7 @@
             <div>Dashboard &copy; 2021</div>
             <div>
               Made by
-              <a href="https://github.com/Onaivio" target="_blank" class="text-blue-500 hover:underline"
-                >Onaivio</a
-              >
+              <a href="https://github.com/Onaivio" target="_blank" class="text-blue-500 hover:underline">Onaivio</a>
             </div>
           </footer>
         </div>
